# DeepLearning.AI-Data-Engineering-Professional-Certificate

./: .gitignore  README.md  pyproject.toml
course1/week2/assignment/: C1_W2_Dashboard.ipynb
course1/week2/assignment/terraform/: backend.tf
