[project]
name = "deeplearning-ai-data-engineering-professional-certificate"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Barbaric",email = "markantonybarbaric@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "deeplearning"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
